# GambitSharp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  gen.cmd
src/: CMakeLists.txt  GambitSharp.sln  SharpGambit.sln
src/GambitSharp.Api/: Action.cs  CollectionExtensions.cs  GambitSharp.Api.csproj  Game.cs  GameObject.cs  InfoSet.cs  Node.cs  Outcome.cs  Player.cs  Rational.cs  Solvers.cs  Strategy.cs  StrategyProfile.cs
src/GambitSharp.Api.Fs/: GambitSharp.Api.Fs.fsproj  Game.fs  Solvers.fs
src/GambitSharp.Api.Native/: GambitSharp.Api.Native.vcxproj  GambitSharp.Api.Native.vcxproj.filters  api.h  dllmain.cpp  game.h  player.h  solvers.h  strategy.h  strategyprofile.h
src/GambitSharp.Base/: Exceptions.cs  GambitSharp.Base.csproj  Global.cs  Logger.cs  Runtime.cs
src/GambitSharp.Base/Extensions/: CollectionExtensions.cs  IOExtensions.cs  StringExtensions.cs
src/GambitSharp.Bindings/: GambitSharp.Bindings.csproj  NativeHelpers.cs  NativeUtils.cs  gambit.cs
src/GambitSharp.Generator/: GambitSharp.Generator.csproj  Library.cs  Options.cs  Program.cs
src/GambitSharp.Generator/Properties/: launchSettings.json
src/SharpGambit.Api/: Action.cs  CollectionExtensions.cs  Game.cs  GameObject.cs  InfoSet.cs  Node.cs  Outcome.cs  Player.cs  Rational.cs  SharpGambit.Api.csproj  Solvers.cs  Strategy.cs  StrategyProfile.cs
src/SharpGambit.Api.Fs/: Game.fs  NormalFormGame.fs  SharpGambit.Api.Fs.fsproj  Solvers.fs
src/SharpGambit.Api.Native/: Collections.h  Game.h  Player.cpp  Player.h  SharpGambit.Api.Native.vcxproj  SharpGambit.Api.Native.vcxproj.filters  api.h  game.h  outcome.h  pch.h  player.h  sharpgambit.h  solvers.h  strategy.h  strategyprofile.h  xplayer.h
src/SharpGambit.Base/: Exceptions.cs  Global.cs  Logger.cs  Runtime.cs  SharpGambit.Base.csproj
src/SharpGambit.Base/Extensions/: CollectionExtensions.cs  IOExtensions.cs  StringExtensions.cs
src/SharpGambit.Bindings/: Collections.cs  Extensions.cs  NativeHelpers.cs  NativeUtils.cs  SharpGambit.Bindings.csproj  Std.cs  agg.cs  array.cs  bagg.cs  behavmixed.cs  behavpure.cs  behavspt.cs  dvector.cs  gambit.cs  game.cs  gameagg.cs  gamebagg.cs  gameobject.cs  integer.cs  list.cs  matrix.cs  number.cs  proj_func.cs  pvector.cs  rational.cs  sharpgambit.cs  stratmixed.cs  stratpure.cs  stratspt.cs  trie_map.cs  vector.cs  writer.cs
src/SharpGambit.Bindings2/: Mapping.xml  SharpGambit.Bindings2.csproj
src/SharpGambit.Generator/: Library.cs  Options.cs  Program.cs  SharpGambit.Generator.csproj
src/SharpGambit.Generator/Properties/: launchSettings.json
src/SharpGambit.Native.Api/: Collections.h  Game.cpp  Game.h  Player.h  SharpGambit.Native.Api.vcxproj  SharpGambit.Native.Api.vcxproj.filters  dllmain.cpp  pch.h  sharpgambit.h
tests/GambitSharp.Tests.Api/: GambitSharp.Tests.Api.csproj  GameTests.cs  SolverTests.cs
tests/GambitSharp.Tests.Api.Fs/: GambitSharp.Tests.Api.Fs.fsproj  NormalFormTests.fs
tests/GambitSharp.Tests.Bindings/: GambitSharp.Tests.Bindings.csproj  GameTests.cs
tests/GambitSharp.Tests.Native/: GambitSharp.Tests.Native.vcxproj  pch.h  test.cpp
tests/SharpGambit.Native.Tests/: test.cpp  (+1 more)
(+11 files in other folders)
